--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sala-de-juegos",
   "version": "0.0.0",
+  "engines": {
+    "node": "12.x"
+  },
   "license": "MIT",
   "scripts": {
     "ng": "ng",
