--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "@angular/router": "^11.0.0-next.0",
     "bootstrap": "^4.5.2",
     "core-js": "^2.4.1",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^1.9.1",
     "rxjs": "^6.6.2",
     "rxjs-compat": "^6.0.0-rc.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
