Cambios esteticos, prueba Angular Material

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "express": "^4.17.1",
     "firebase": "^7.20.0",
     "font-awesome": "^4.7.0",
-    "ngx-bootstrap": "^1.9.1",
+    "jquery": "^3.5.1",
+    "ngx-bootstrap": "^1.9.3",
     "ngx-toastr": "^13.0.0",
     "rxjs": "^6.6.2",
     "rxjs-compat": "^6.0.0-rc.0",
